this fixes the overflow issue on all devices!

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -157,7 +157,7 @@ a.username{
   #social-nav {
     position: unset;
   }
-  .sidenav{
+  .sidenav {
     width: 80vw;
   }
   .sidenav li > a.overflow {
@@ -171,6 +171,10 @@ a.username{
 
 @media (max-width: 320px) {
   .sidenav li > a.overflow {
+    line-height: 1.25em;
+    height: auto;
+  }
+  .sidenav li > a#less-overflow {
     line-height: 2.5em;
     height: auto;
   }
